Updated Chapter 3 examples.

--- a/ch03/views/about.handlebars
+++ b/ch03/views/about.handlebars
@@ -1,4 +1,5 @@
 <h1>About Meadowlark Travel</h1>
-
-<p>Your fortune for the day:</p>
-<blockquote>{{fortune}}</blockquote>
+{{#if fortune}}
+  <p>Your fortune for the day:</p>
+  <blockquote>{{fortune}}</blockquote>
+{{/if}}
