--- a/ch06/views/09-page.handlebars
+++ b/ch06/views/09-page.handlebars
@@ -1,3 +1,5 @@
 <!-- see views/layouts/main.hbs for the "rest" of the HTML! -->
 <h2>Example 9 Content Page</h2>
 <p>This is a totally legit page (page {{page}}).</p>
+
+<p>Back to <a href="/">home</a>.</p>
