--- a/ch06/views/greeting.handlebars
+++ b/ch06/views/greeting.handlebars
@@ -20,13 +20,13 @@
     <br />(edit URL to change; for example, <a href="/greeting/?style=fancy">/greeting/?style=fancy</a>)
   </dd>
 
-  <dt>User ID:</dt>
+  <dt>User ID (from cookie):</dt>
   <dd>
     {{userid}}
     <br />(click <a href="/set-random-userid">here</a> to change randomly)
   </dd>
 
-  <dt>Username:</dt>
+  <dt>Username (from session):</dt>
   <dd>
     {{username}}
     <br />(click <a href="/set-random-username">here</a> to change randomly)
