Fix forecastUrl link can not access

--- a/ch07/views/partials/weather.handlebars
+++ b/ch07/views/partials/weather.handlebars
@@ -12,7 +12,7 @@
   {{#each partials.weatherContext}}
     <div class="location">
       <h3>{{location.name}}</h3>
-      <a href="{{location.forecastUrl}}">
+      <a href="{{forecastUrl}}">
         <img src="{{iconUrl}}" alt="{{weather}}">
         {{weather}}, {{temp}}
       </a>
