Clarified & demonstrated redriect mechanism.
Added additional clarifying comments & finished hooking up redirect
system.  You can now visit an authenticated path (like
`/account/order-history`) without being logged in; you will get an
access denied message, but if you then log in, you will be taken to your
original destination, instead of the default auth'd page.

--- a/ch18-19/views/unauthorized.handlebars
+++ b/ch18-19/views/unauthorized.handlebars
@@ -1,1 +1,5 @@
-Sorry, charlie.
+<p>Sorry, charlie.</p>
+<ul>
+    <li><a href="/auth/facebook">Login with Facebook</a></li>
+    <li><a href="/auth/google">Login with Google</a></li>
+</ul>
