--- a/ch18-19/views/home.handlebars
+++ b/ch18-19/views/home.handlebars
@@ -4,10 +4,15 @@
 <p>Check out our <a href="/vacations">vacation packages!</a>!</p>
 <p>Also, please enter our <a href="/contest/vacation-photo-ajax">Vacation Photo Contest</a>!</p>
 
-<ul>
-  <li><a href="/auth/facebook">Login with Facebook</a></li>
-  <li><a href="/auth/google">Login with Google</a></li>
-</ul>
+{{#if username}}
+  <p>Welcome, {{username}}!</p>
+  <p><a href="/logout">Sign Out</a></p>
+{{else}}
+  <ul>
+    <li><a href="/auth/facebook">Login with Facebook</a></li>
+    <li><a href="/auth/google">Login with Google</a></li>
+  </ul>
+{{/if}}
 
 {{> weather}}
 
